# arcane-agt

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  test.http  to_delete.cpp
api/: ApiWrapper.cpp  ApiWrapper.h  RequestBuilder.h
net/: HttpClient.cpp  HttpClient.h  HttpProxy.cpp  HttpProxy.h  HttpServer.cpp  HttpServer.h
rules/: REQUEST-913-SCANNER-DETECTION.json
scanner/: RequestScanner.cpp  RequestScanner.h  ScanResult.cpp  ScanResult.h  Scanner.cpp  Scanner.h  ScannerConfig.cpp  ScannerConfig.h
scanner/rules/: SecRule.h  rules.cpp  rules.h
scanner/rules/request/: AttackPHP.h  AttackRCE.h  AttackSQLi.h  AttackXSS.h  CommonExceptions.h  ExApacheInterConn.h  ExSSLPinger.h  MethodEnforcement.h  ProtocolEnforcement.h  SQLInjection.h  ScannerDetection.h  XSSInjection.h
scanner/rules/response/: LeakagePHP.h  LeakageSQL.h  WebShells.h
scripts/: crs_converter.py
static/: blocked.html
